fix out of bound issue

--- a/src/output.css
+++ b/src/output.css
@@ -2349,6 +2349,16 @@ video {
   padding-bottom: 2px;
 }
 
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.py-\[4px\] {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
